--- a/desktop/styles/components/sidebar/qrshare.module.scss
+++ b/desktop/styles/components/sidebar/qrshare.module.scss
@@ -1,30 +1,21 @@
 @import '@common/styles/config';
 
+$padding-x: 1rem;
+
 .wrap {
-  padding: 0 1rem;
+  padding: 0 $padding-x;
 }
 
 .code {
-  max-width: 100%;
+  --size: min(calc(var(--sidebar-width) - #{$padding-x * 2}), 30vh);
 
-  &::before {
-    content: '';
-    float: left;
-    height: 0;
-    margin-left: -1px;
-    padding-top: 100%;
-    width: 1px;
-  }
-
-  &::after {
-    clear: both;
-    content: '';
-    display: table;
-  }
+  height: var(--size);
+  margin: 0 auto;
+  width: var(--size);
 
   canvas {
     display: block;
-    height: auto !important;
+    height: 100% !important;
     width: 100% !important;
   }
 }
