--- a/desktop/styles/components/sidebar/search.module.scss
+++ b/desktop/styles/components/sidebar/search.module.scss
@@ -3,6 +3,7 @@
 .form {
   display: flex;
   flex-wrap: wrap;
+  margin-top: 0;
 }
 
 .label {
